styles.css
/*
Background Colors: #ffffff (White), #f9fafb, #ffe6eb, #ffd1dc
Text Colors: #ffffff, #ffaec0, #9ca3af, #4b5563, #374151, #1f2937, #000000 (Black)
*/

/* CSS Reset */

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

.body-container {
  font-family: Montserrat, sans-serif;
  background-color: #f9fafb;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/* Navigation Bar */

/* Hamburger Menu */
.hamburger-navbar {
  display: none;
}

.navbar-container {
  background-color: #ffd1dc;
  display: flex;
  justify-content: space-around;
  padding-top: 10px;
  padding-bottom: 10px;
  position: fixed;
  width: 100%;
  z-index: 9999;
}

.logo-container {
  display: flex;
  align-items: center;
}

.logo-img {
  width: 40px;
  height: 40px;
  margin-right: 10px;
}

.logo-name {
  font-size: 2rem;
  font-weight: bold;
}

.navbar {
  display: flex;
  align-items: center;
}

.navbar > ul {
  display: flex;
  list-style: none;
  gap: 20px;
}

.navbar a {
  display: inline-block;
  font-size: 1.5rem;
  text-decoration: none;
  color: #4b5563;
  position: relative;
  transition:
    color 0.3s ease,
    transform 0.3s ease;
}

.navbar a:hover {
  color: #ffaec0;
  transform: translate(2px, -2px);
}

.navbar a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 0;
  height: 2px;
  background-color: #ffaec0;
}

.navbar a.active {
  color: #ffaec0;
}

.navbar a.active::after {
  width: 100%;
}

/* Footer */

.footer-container {
  background-color: #ffd1dc;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-inner-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
}

.footer-top,
.footer-bottom {
  margin: 10px 0;
}

.footer-top {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-brand > .logo-container {
  margin-bottom: 10px;
}

.socials-navbar {
  display: flex;
  gap: 20px;
}

.socials-navbar a {
  color: #9ca3af;
  font-size: 1.5rem;
  transition:
    color 0.3s ease,
    transform 0.3s ease;
}

.socials-navbar a:hover {
  color: white;
}

.footer-divider {
  width: 100%;
}

/* Home Page */

h1 {
  font-size: 5rem;
  color: #ffaec0;
}

h2 {
  color: #ffaec0;
}

.page-container {
  margin-top: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.portfolio-summary-container {
  width: 100%;
  display: flex;
  gap: 100px;
  justify-content: center;
}

.portfolio-summary-image {
  width: 320px;
  height: 320px;
}

.portfolio-summary-image > img {
  width: 320px;
  height: 320px;
  border: 10px solid white;
  border-radius: 50%;
}

.profile-image2 {
  display: none;
}

.portfolio-summary-image:hover .profile-image1 {
  display: none;
}

.portfolio-summary-image:hover .profile-image2 {
  display: block;
}

.portfolio-summary-info {
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.portfolio-summary-info > p {
  max-width: 600px;
}

.main-socials > a {
  font-size: 2rem;
  color: black;
}

.main-socials > a:hover {
  color: #ffaec0;
  transform: translate(2px, -2px);
}

.featured-works-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.featured-works {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

.card {
  max-width: 300px;
  height: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 4px solid pink;
  border-radius: 50%;
  overflow: hidden;
  position: relative;
  transition: border-radius 0.3s ease;
}

.card:hover {
  border-radius: 5px;
  border: 2px solid pink;
}

.card:hover figcaption {
  position: static;
  opacity: 1;
}

figcaption {
  position: absolute;
  bottom: 0;
  opacity: 0;
}

.card > img {
  width: 100%;
  height: 100%;
}

.featured-works-container > button {
  margin-bottom: 20px;
  padding: 10px;
  border-radius: 10px;
  background-color: #ffaec0;
  font-weight: bold;
  cursor: pointer;
  border: none;
}

/* Media Queries */
@media (max-width: 768px) {
  .navbar {
    display: none;
  }
  .hamburger-navbar {
    width: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 6px;
  }
  .portfolio-summary-container {
    flex-direction: column;
    align-items: center;
    gap: 1px;
  }
  .featured-works {
    grid-template-columns: 1fr;
  }
  .footer-inner-container {
    gap: 10px;
  }
  .footer-top {
    flex-direction: column;
    gap: 10px;
  }
  .footer-brand {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

